fix vec